--- a/template/app/views/layouts/application.html.haml
+++ b/template/app/views/layouts/application.html.haml
@@ -5,11 +5,11 @@
     %meta{ :"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8" } 
     %title= ApplicationController::TITLE
     = javascript_include_tag :defaults, :cache => "all"
-    = stylesheet_link_tag 'compiled/screen.css', :media => 'screen, projection'
+    = stylesheet_link_tag layout_css_path, :media => 'screen, projection'
     = stylesheet_link_tag 'compiled/print.css', :media => 'print'
     /[if lt IE 8]
       = stylesheet_link_tag 'compiled/ie.css', :media => 'screen, projection'
-  %body.bp{:class => "#{layout_class}"}
+  %body.bp{:class => "#{layout_css_class}"}
     .app-container
       .app-header= render :partial => "layouts/header"
       = render :partial => layout_partial
