Added styles for header, footer and user menu

--- a/template/app/stylesheets/layouts/_layouts.scss
+++ b/template/app/stylesheets/layouts/_layouts.scss
@@ -4,7 +4,8 @@ $parts: 0;
 body {
   .app-container {
     @include container;
-    @include showgrid; }
+    @include showgrid;
+    position: relative; }
   .app-header, .app-footer {
     @include column($grid-columns); } }
 
