--- a/template/app/stylesheets/_screen.scss
+++ b/template/app/stylesheets/_screen.scss
@@ -1,5 +1,6 @@
 // This import applies a global reset to any page that imports this stylesheet.
 @import "blueprint/reset";
+@import "compass/reset/utilities";
 
 // To configure blueprint, edit the partials/base.sass file.
 @import "partials/base";
@@ -10,3 +11,6 @@
 // Combine the partials into a single screen stylesheet.
 @import "partials/page";
 @import "partials/form";
+@import "partials/header";
+@import "partials/user_navigation";
+@import "partials/footer";
