--- a/template/app/views/layouts/_header.html.haml
+++ b/template/app/views/layouts/_header.html.haml
@@ -1,1 +1,4 @@
-%h1 Header
+%h1
+  %a{ :href => "/" }= ApplicationController::TITLE
+= render :partial => "layouts/user_navigation"
+= render :partial => "layouts/main_navigation"
