Changed colors of template

--- a/template/app/stylesheets/_screen.scss
+++ b/template/app/stylesheets/_screen.scss
@@ -9,8 +9,7 @@
 @import "blueprint";
 
 // Combine the partials into a single screen stylesheet.
+@import "partials/colors";
 @import "partials/page";
 @import "partials/form";
-@import "partials/header";
 @import "partials/user_navigation";
-@import "partials/footer";
