--- a/template/app/views/layouts/partials/_sidebar_content_sidebar_layout.html.haml
+++ b/template/app/views/layouts/partials/_sidebar_content_sidebar_layout.html.haml
@@ -1,6 +1,9 @@
 .app-left-sidebar
-  left-sidebar
+  .app-sidebar-wrapper
+    left-sidebar
 .app-content
-  = yield
+  .app-content-wrapper
+    = yield
 .app-right-sidebar
-  right-sidebar
+  .app-sidebar-wrapper
+    right-sidebar
