--- a/template/app/views/main/index.html.haml
+++ b/template/app/views/main/index.html.haml
@@ -1,3 +1,41 @@
-%h1 Home#index
+%h1 Welcome
 %p
-  Find me in app/views/home/index.html.erb
+  This Rails application has been created with the help of
+  %a(href="http://github.com/maxd/basement") basement
+  plugin. Now you can modifiy application as you want.
+
+%h2 Available features
+%ul.square-list
+  %li Two layout types (with and without sidebar)
+  %li Admin panel
+  %li SSL support
+  %li
+    Powerfull HTML engine
+    %a(href="http://haml-lang.com") HAML
+    and CSS engine
+    %a(href="http://sass-lang.com") SASS
+  %li
+    Authentication with
+    %a(href="http://github.com/binarylogic/authlogic") authlogic
+    and authorization with
+    %a(href="http://github.com/be9/acl9") acl9
+    plugins
+  %li
+    Navigation menu with
+    %a(href="http://github.com/andi/simple-navigation") simple-navigation
+    plugin
+  %li
+    Powerfull FORM generator
+    %a(href="http://github.com/justinfrench/formtastic") formtastic
+  %li
+    HTML table generator
+    %a(href="http://github.com/pluginaweek/table_helper") table_helper
+    and paginator
+    %a(href="http://github.com/mislav/will_paginate") will_paginate
+  %li
+    Functional tests based on
+    %a(href="http://github.com/aslakhellesoy/cucumber") cucumber
+    and
+    %a(href="http://github.com/brynary/webrat") webrat
+    engines
+
