Added supporting of sidebars

--- a/template/app/stylesheets/partials/_colors.scss
+++ b/template/app/stylesheets/partials/_colors.scss
@@ -3,7 +3,7 @@ $bg_color:       #FFFFFF;
 $quiet_color:    #E8F3F8;
 $loud_color:     #C2CBCE;
 $header_color:   #81A8B8;
-$alt_text_color: #666666;
+$alt_text_color: #5E9DB8;
 
 $bg_image: "/images/bg.png";
 
