--- a/template/app/views/layouts/partials/_sidebar_content_layout.html.haml
+++ b/template/app/views/layouts/partials/_sidebar_content_layout.html.haml
@@ -1,6 +1,6 @@
 .app-sidebar
   .app-sidebar-wrapper
-    sidebar
+    = render :partial => "sidebar"
 .app-content
   .app-content-wrapper
     = yield
